Handle wildcard parameter in Topic list API (#410)